// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pill with border 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "borderColor": "#40B66B",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    Icon
  </Text>
  <View
    style={
      [
        {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 8,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        {
          "color": undefined,
        },
      ]
    }
  >
    My Second Pill Label
  </Text>
</View>
`;

exports[`renders a Pill without image 1`] = `
<View
  sentry-label="Flex"
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#F9F9F9",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 8,
      },
      {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      [
        {
          "color": "#222222",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        {
          "color": "accent1",
        },
      ]
    }
  >
    My Pill Label
  </Text>
</View>
`;
